<resources>
    <string name="app_name">NU COUNT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="input">Input Data</string>
    <string name="exit_menu">Logout</string>

    <string-array name="status_nikah">
        <item>MENIKAH</item>
        <item>BELUM MENIKAH</item>
    </string-array>

    <string-array name="jenis_kelamin">
        <item>LAKI</item>
        <item>PEREMPUAN</item>
    </string-array>

    <string-array name="kabupaten">
        <item>BANYUWANGI</item>
    </string-array>

    <string-array name="pendidikan">
        <item>SD, MI</item>
        <item>SLTP, MTs</item>
        <item>SLTA, MA, SMK</item>
        <item>S-1</item>
        <item>S-2</item>
        <item>S-3</item>
    </string-array>

    <string-array name="penghasilan">
        <item> > 500,000</item>
        <item>500 s.d 1.000,000</item>
        <item>1.000,000 sd 2.000,000</item>
        <item>2.000,000 sd 4.000,000</item>
        <item> > 4.000,000</item>
    </string-array>

    <string-array name="anggota">
        <item>Anggota</item>
        <item>Bukan</item>
    </string-array>

    <string-array name="hk">
        <item>Istri/Suami</item>
        <item>Anak</item>
        <item>Menantu</item>
    </string-array>

    <string-array name="pendidikan_or">
        <item>Belum Sekolah</item>
        <item>SLTP, MTs</item>
    </string-array>

    <!-- login -->
    <string name="heading_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="validation_username">Username tidak boleh kosong</string>
    <string name="validation_password">Password tidak boleh kosong</string>

    <!-- Form Input -->
    <string name="hint_nama">Masukan Nama</string>
    <string name="hint_nama_lengkap">Masukan Nama Lengkap</string>
    <string name="hint_nik">Masukan NIK</string>
    <string name="hint_tgl_lahir">Masukan Tanggal Lahir</string>
    <string name="hint_tempat_lahir">Masukan Tempat Lahir</string>
    <string name="hint_usia">Masukan Usia</string>
    <string name="hint_no_hp">Masukan Nomor Hp</string>
    <string name="hint_umur">Umur otomatis setelah tgl lahir diinput</string>
    <string name="data_pekerjaan">Data Pekerjaan</string>
    <string name="data_keluarga">Data Keluarga</string>
    <string name="add">Tambah</string>
    <string name="remove">Hapus</string>
    <string name="submit">Simpan</string>
    <string name="subpekerjaan_3">Sub Pekerjaan 3 (Opsional)</string>

    <!-- Dialog -->
    <string name="text_logout">Apakah anda yakin ingin logout ?</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="hint_universitas">Universitas/Jurusan</string>
    <string name="hint_dusun">Nama dusun</string>
    <string name="data_anggota">Data Anggota</string>
    <string name="hint_katanu">Katanu (Opsional)</string>
    <string name="hint_nama_struktur">Nama Struktur (Opsional)</string>
    <string name="hint_kepengurusan">Kepengurusan (Periode) / Opsional</string>
    <string name="sync">Sinkronisasi</string>

</resources>