<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.InputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profileWrapper"
                android:layout_width="65dp"
                android:layout_height="65dp"
                app:cardCornerRadius="50dp"
                app:strokeColor="@color/baseColor"
                app:contentPadding="5dp"
                app:strokeWidth="3dp">

                <ImageView
                    android:id="@+id/profileImg"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/ic_worker"
                    android:scaleType="centerCrop" />

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_nama_lengkap"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nik"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_nik"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_tanggal_lahir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_tgl_lahir"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_umur"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/app_name"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_tempat_lahir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_tempat_lahir"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_jenis_kelamin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nomor_hp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_no_hp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_kabupaten"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_kecamatan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_desa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_dusun"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_rt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/spinner_rw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/spinner_dropdown_state"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:id="@+id/sub_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Spinner
                android:id="@+id/spinner_pendidikan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner_dropdown_state"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spinner_pekerjaan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner_dropdown_state"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spinner_subpekerjaan1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner_dropdown_state"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spinner_subpekerjaan2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner_dropdown_state"
                android:spinnerMode="dropdown" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_subpekerjaan_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/app_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_penghasilan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner_dropdown_state"
                android:spinnerMode="dropdown" />

            <!-- child of form - dynamic -->
            <LinearLayout
                android:id="@+id/sub_dynamic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Spinner
                android:id="@+id/spinner_anggota"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner_dropdown_state"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_dynamic_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/add" />

            <Button
                android:id="@+id/btn_remove_dynamic_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/remove" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>