<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/tv_data_keluarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_keluarga"
            android:textColor="@color/fontColorHeading"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/tv_data_keluarga"
            android:background="@color/dividerColor" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:errorEnabled="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_nama"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        app:errorEnabled="true"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_usia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_usia"
            android:inputType="number"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--    <EditText-->
    <!--        android:id="@+id/txt_nama"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:autofillHints="@string/app_name"-->
    <!--        android:hint="@string/app_name"-->
    <!--        android:inputType="text" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/txt_usia"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:autofillHints="@string/app_name"-->
    <!--        android:hint="@string/app_name"-->
    <!--        android:inputType="number" />-->

    <Spinner
        android:id="@+id/spinner_hk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/spinner_dropdown_state"
        android:entries="@array/hk"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/spinner_pendidikan_or"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/spinner_dropdown_state"
        android:entries="@array/pendidikan_or"
        android:spinnerMode="dropdown" />
</LinearLayout>